--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="transpert">#00000000</color>
     <color name="alltextview_blackLight">#3C3C3C</color>
     <color name="baby_gold">#DDC09A</color>
+    <color name="navy_blue">#141C31</color>
 
 
 </resources>
