--- a/app/src/main/res/layout/item_recylerview_name_hadeth.xml
+++ b/app/src/main/res/layout/item_recylerview_name_hadeth.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="10dp">
 
     <androidx.cardview.widget.CardView
+        style="@style/bakg_cardview_hadeth"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="20dp"
-        android:backgroundTint="@color/gold"
-
         android:elevation="90dp"
-        app:cardCornerRadius="10dp"
-       >
+        app:cardCornerRadius="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -24,18 +22,14 @@
 
             <TextView
                 android:id="@+id/txt_view_item_hadeth"
+                style="@style/txt_card_hadeth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/regular"
                 android:gravity="center"
-                tools:text="الحديث رقم 1"
-                android:textColor="@color/white"
-                android:textSize="25sp"
-                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-
                 app:layout_constraintTop_toTopOf="parent"
+                tools:text="الحديث رقم 1"
 
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
