--- a/app/src/main/res/layout/activty_quraan_contant.xml
+++ b/app/src/main/res/layout/activty_quraan_contant.xml
@@ -21,8 +21,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="@font/lobster"
                 android:text="@string/islami"
-                android:textColor="@color/alltextview_blackLight"
-                android:textSize="35sp" />
+                style="@style/txtToolbar"/>
 
             <ImageView
                 android:id="@+id/back"
