--- a/app/src/main/res/layout/fragment_hadeth.xml
+++ b/app/src/main/res/layout/fragment_hadeth.xml
@@ -26,34 +26,31 @@
 
     <TextView
         android:id="@+id/tv_hadeth"
+        style="@style/txt_fragment_hadeth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:fontFamily="@font/lobster"
         android:gravity="center"
         android:text="@string/hadeth"
-        android:textColor="@color/alltextview_blackLight"
-        android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/line1_hadeth"
-        />
+        app:layout_constraintTop_toBottomOf="@id/line1_hadeth" />
 
     <View
         android:id="@+id/view_line_bottom"
         android:layout_width="wrap_content"
         android:layout_height="3dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_hadeth"
-        app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/dark_gold"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_hadeth" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/view_line_bottom"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_line_bottom"
         tools:listitem="@layout/item_recylerview_name_hadeth"
 
         />
