--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,5 +13,50 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="txtToolbar">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/lobster</item>
+    </style>
+    <style name="txt_fragment_quran">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/lobster</item>
+    </style>
+    <style name="txt_title_quran">
+        <item name="android:textColor">@color/yellow</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/lobster</item>
+    </style>
+    <style name="txt_contant_quran">
+        <item name="android:textColor">@color/yellow</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/dthuluth</item>
+    </style>
+
+    <style name="txt_fragment_hadeth">
+        <item name="android:textColor">@color/alltextview_blackLight</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/lobster</item>
+    </style>
+    <style name="bakg_cardview_hadeth">
+        <item name="android:backgroundTint">@color/navy_blue</item>
+    </style>
+
+    <style name="txt_card_hadeth">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/regular</item>
+    </style>
+    <style name="img">
+        <item name="android:background">@drawable/splashdark</item>
+    </style>
+
 
 </resources>
