--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="alltextview_blackLight">#3C3C3C</color>
     <color name="baby_gold">#DDC09A</color>
     <color name="navy_blue">#141C31</color>
+    <color name="yellow">#FACC1D</color>
+
 
 
 </resources>
