--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="baby_gold">#DDC09A</color>
     <color name="navy_blue">#141C31</color>
     <color name="yellow">#FACC1D</color>
+    <color name="gray">#707070</color>
+
 
 
 
