--- a/app/src/main/res/layout/activitycontanthome.xml
+++ b/app/src/main/res/layout/activitycontanthome.xml
@@ -19,7 +19,7 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gold"
+        style="@style/bakground_nav"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/home_bottom_nav"
         app:itemTextColor="@color/nav_selector"
