--- a/app/src/main/res/layout/activty_quran_contant_style.xml
+++ b/app/src/main/res/layout/activty_quran_contant_style.xml
@@ -8,7 +8,7 @@
 
 
     <androidx.cardview.widget.CardView
-
+       style="@style/bkg_contant"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="15dp"
