--- a/app/src/main/res/layout/fragment_quran.xml
+++ b/app/src/main/res/layout/fragment_quran.xml
@@ -28,26 +28,22 @@
         app:layout_constraintTop_toBottomOf="@id/img_logo" />
 
     <TextView
+        style="@style/title_number_quran"
         android:id="@+id/nameSura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:text="@string/name_sura"
-        android:textColor="@color/alltextview_blackLight"
-        android:textSize="30sp"
-        android:fontFamily="@font/lobster"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line1" />
 
     <TextView
+        style="@style/title_number_quran"
         android:id="@+id/number_ayat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/aya_num"
-        android:textColor="@color/alltextview_blackLight"
-        android:textSize="30sp"
-        android:fontFamily="@font/lobster"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line1" />
 
