--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/navy_blue</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/navy_blue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
@@ -39,7 +39,7 @@
     </style>
 
     <style name="txt_fragment_hadeth">
-        <item name="android:textColor">@color/alltextview_blackLight</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/lobster</item>
@@ -54,8 +54,46 @@
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/regular</item>
     </style>
+    <style name="bakground_nav">
+        <item name="android:background">@color/navy_blue</item>
+    </style>
     <style name="img">
-        <item name="android:background">@drawable/splashdark</item>
+        <item name="android:background">@drawable/splash_dark</item>
+    </style>
+
+    <style name="img_bkg_app">
+        <item name="android:background">@drawable/default_bg_dark</item>
+    </style>
+
+    <style name="bkg_contant">
+        <item name="android:backgroundTint">@color/navy_blue</item>
+    </style>
+
+
+
+    <style name="headSebha">
+        <item name="android:src">@drawable/head_sebha_logo_dark</item>
+    </style>
+    <style name="bodySebha">
+        <item name="android:src">@drawable/body_sebha_logo_dark</item>
+    </style>
+    <style name="numtasbeh">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/regular</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="prograss">
+    <item name="android:indeterminateTint">@color/white
+    </item>
+    </style>
+    <style name="title_number_quran">
+
+        <item name="android:textSize">30sp </item>
+        <item name="android:fontFamily">@font/lobster </item>
+        <item name="android:textColor">@color/white </item>
+
     </style>
 
 
