--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
 
         <!-- Customize your theme here. -->
     </style>
+
     <style name="txtToolbar">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">30sp</item>
@@ -34,12 +35,14 @@
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/lobster</item>
     </style>
+
     <style name="txt_contant_quran">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/dthuluth</item>
     </style>
+
     <style name="txt_fragment_hadeth">
         <item name="android:textColor">@color/alltextview_blackLight</item>
         <item name="android:textSize">30sp</item>
@@ -48,14 +51,14 @@
     </style>
 
     <style name="bakg_cardview_hadeth">
-       <item name="android:backgroundTint">@color/gold</item>
+        <item name="android:backgroundTint">@color/gold</item>
     </style>
+
     <style name="bkg_contant">
         <item name="android:backgroundTint">@color/white</item>
     </style>
-    <style name="bakground_nav">
-        <item name="android:background">@color/gold</item>
-    </style>
+
+
     <style name="img">
         <item name="android:background">@drawable/splash</item>
     </style>
@@ -71,12 +74,13 @@
         <item name="android:background">@drawable/default_bg</item>
     </style>
 
-<style name="headSebha">
-    <item name="android:src">@drawable/head_sebha_logo_night</item>
-</style>
-<style name="bodySebha">
-    <item name="android:src">@drawable/body_sebha_logo_night</item>
-</style>
+    <style name="headSebha">
+        <item name="android:src">@drawable/head_sebha_logo_night</item>
+    </style>
+
+    <style name="bodySebha">
+        <item name="android:src">@drawable/body_sebha_logo_night</item>
+    </style>
 
     <style name="numtasbeh">
         <item name="android:textSize">25sp</item>
@@ -90,18 +94,46 @@
         </item>
     </style>
 
-
-
-
     <style name="title_number_quran">
 
-        <item name="android:textSize">30sp </item>
-        <item name="android:fontFamily">@font/lobster </item>
-        <item name="android:textColor">@color/alltextview_blackLight </item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:fontFamily">@font/lobster</item>
+        <item name="android:textColor">@color/alltextview_blackLight</item>
 
     </style>
 
+    <style name="select">
+        <item name="android:background">@color/gold</item>
+        <item name="itemTextColor">@color/nav_selector</item>
+        <item name="itemIconTint">@color/nav_selector</item>
+    </style>
 
+    <style name="radiotxt">
+
+        <item name="android:textSize">35sp</item>
+        <item name="android:fontFamily">@font/lobster</item>
+        <item name="android:textColor">@color/alltextview_blackLight</item>
+
+    </style>
+
+    <style name="sebha_txt_bakg">
+        <item name="android:backgroundTint">@color/gold
+        </item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/lobster</item>
+
+    </style>
+
+    <style name="sebha_number">
+        <item name="android:backgroundTint">@color/dark_gold
+        </item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/lobster</item>
+
+    </style>
 
 
 </resources>
