--- a/app/src/main/res/layout/activitycontanthome.xml
+++ b/app/src/main/res/layout/activitycontanthome.xml
@@ -19,11 +19,9 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/bakground_nav"
+        style="@style/select"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/home_bottom_nav"
-        app:itemTextColor="@color/nav_selector"
-        app:itemIconTint="@color/nav_selector"
         app:itemIconSize="35sp"
 
         />
