c38 new feature seb7a

--- a/app/src/main/res/layout/fragment_sebha.xml
+++ b/app/src/main/res/layout/fragment_sebha.xml
@@ -7,66 +7,66 @@
     tools:context=".quran.QuranFragment">
 
     <ImageView
-        android:id="@+id/img_head_sebha"
-        style="@style/headSebha"
+        android:id="@+id/img_head_seb7a"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+
+        android:src="@drawable/head_sebha_logo_night"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/img_body_sebha"
-        style="@style/bodySebha"
+        android:id="@+id/img_body_seb7a"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="-30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_head_sebha" />
+        android:src="@drawable/body_sebha_logo_night"
+        app:layout_constraintEnd_toEndOf="@id/img_head_seb7a"
+        app:layout_constraintStart_toStartOf="@id/img_head_seb7a"
+        app:layout_constraintTop_toBottomOf="@id/img_head_seb7a" />
 
     <TextView
-        android:id="@+id/tv_add_elsbha"
-        style="@style/numtasbeh"
+        android:id="@+id/tv_numb_seb7a"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="@string/add_eltasbeh"
-        app:layout_constraintEnd_toEndOf="@id/img_body_sebha"
-        app:layout_constraintStart_toStartOf="@id/img_body_sebha"
-        app:layout_constraintTop_toBottomOf="@id/img_body_sebha"></TextView>
-
-    <TextView
-        android:id="@+id/TheNumber"
-        style="@style/sebha_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/shape_number_tasbeh"
-        android:paddingHorizontal="30dp"
-        android:paddingVertical="20dp"
-        android:text="0"
+        android:text="عدد التسبيحات "
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_add_elsbha"
-
-        />
+        app:layout_constraintTop_toBottomOf="@id/img_body_seb7a" />
 
     <TextView
-        android:id="@+id/tv_convert_sobhan_aaalh"
-        style="@style/sebha_txt_bakg"
+        android:id="@+id/counter_seb7a"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape_seb7a"
+        android:padding="20dp"
+        android:text="0"
+        android:textColor="@color/white"
+        android:textSize="19sp"
+        app:layout_constraintEnd_toEndOf="@id/tv_numb_seb7a"
+        app:layout_constraintStart_toStartOf="@id/tv_numb_seb7a"
+        app:layout_constraintTop_toBottomOf="@id/tv_numb_seb7a" />
+
+    <TextView
+        android:id="@+id/conver_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
-        android:background="@drawable/shape_text_tasbeh"
-        android:paddingHorizontal="30dp"
-        android:paddingVertical="10dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@id/TheNumber"
-        app:layout_constraintStart_toStartOf="@id/TheNumber"
-        app:layout_constraintTop_toBottomOf="@id/TheNumber"
-        tools:text="@string/elketma" />
+        android:background="@drawable/shape_seb7a"
+        android:text="@string/elketma"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/counter_seb7a"
+        app:layout_constraintStart_toStartOf="@id/counter_seb7a"
+        app:layout_constraintTop_toBottomOf="@id/counter_seb7a"
+
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
