--- a/app/src/main/res/layout/fragment_radio.xml
+++ b/app/src/main/res/layout/fragment_radio.xml
@@ -6,66 +6,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".quran.QuranFragment">
 
-        <ImageView
-            android:id="@+id/image_radio"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="75dp"
-            app:layout_constraintHeight_percent=".40"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-
-            android:src="@drawable/radio_image"/>
-
-    <TextView
-        style="@style/radiotxt"
-        android:id="@+id/tv_activty_radio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/image_radio"
-        app:layout_constraintEnd_toEndOf="@id/image_radio"
-        app:layout_constraintStart_toStartOf="@id/image_radio"
-        android:text="@string/ezat_elquran_elkarem"
-        android:layout_marginTop="25dp"
-
-        />
-
     <ImageView
-        android:id="@+id/play"
+        android:id="@+id/image_radio"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_activty_radio"
-        android:src="@drawable/play"
-
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="@id/tv_activty_radio"
-        app:layout_constraintStart_toStartOf="@id/tv_activty_radio"
-        />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/play"
-        android:layout_marginTop="50dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="75dp"
+        app:layout_constraintHeight_percent=".40"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_activty_radio"
-        android:src="@drawable/skip_next"
-        />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toStartOf="@id/play"
-        app:layout_constraintTop_toBottomOf="@id/tv_activty_radio"
-        android:src="@drawable/skip_next"
-        />
 
+        android:src="@drawable/radio_image" />
 
-
-
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/radio_rv"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/image_radio"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_radio"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        android:orientation="horizontal"
+        android:layout_height="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
