--- a/app/src/main/res/layout/fragment_radio.xml
+++ b/app/src/main/res/layout/fragment_radio.xml
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toBottomOf="@id/image_radio"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_radio"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="horizontal"
         android:layout_height="0dp" />
 
